Better font, and other goodies

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,11 @@
 <html>
     <head>
         <title>The Blob</title>
+
+        <link
+            href="https://fonts.googleapis.com/css?family=Quicksand:400,700&display=swap"
+            rel="stylesheet">
+
         <style>
             html, body {
                 height: 100vh;
@@ -11,6 +16,28 @@
                 flex-flow: column;
                 align-items: center;
                 justify-content: center;
+
+                font-family: Quicksand, Helvetica, Arial, sans-serif;
+                font-size: 30px;
+            }
+            form {
+                font-size: 30px;
+            }
+            h1 {
+                margin-left: 60px;
+                margin-right: 60px;
+                font-size: 38px;
+            }
+            input, button {
+                font-family: Quicksand, Helvetica, Arial, sans-serif;
+                font-size: 30px;
+                padding: 10px 15px;
+            }
+            p {
+                margin-top: 0;
+            }
+            .result-gender {
+                font-weight: bold;
             }
         </style>
     </head>
