--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <h1>The imperfect Spanish word gender detector</h1>
     <form method=GET action="./detect/">
         <input type="text" name="word" placeholder="Enter a word">
         <button type="submit">Check gender</button>
