Better handling of edge case

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,26 +18,32 @@
                 justify-content: center;
 
                 font-family: Quicksand, Helvetica, Arial, sans-serif;
-                font-size: 30px;
+                font-size: 22px;
             }
             form {
-                font-size: 30px;
+                font-size: 22px;
             }
-            h1 {
+            h1, p {
                 margin-left: 60px;
                 margin-right: 60px;
+            }
+            h1 {
                 font-size: 38px;
+            }
+            p {
+                margin-top: 0;
             }
             input, button {
                 font-family: Quicksand, Helvetica, Arial, sans-serif;
                 font-size: 30px;
                 padding: 10px 15px;
             }
-            p {
-                margin-top: 0;
-            }
             .result-gender {
                 font-weight: bold;
+            }
+
+            @media (min-width) {
+
             }
         </style>
     </head>
