--- a/templates/base.html
+++ b/templates/base.html
@@ -22,10 +22,13 @@
             }
             form {
                 font-size: 22px;
+                margin-left: 60px;
+                margin-right: 60px;
             }
             h1, p {
                 margin-left: 60px;
                 margin-right: 60px;
+                text-align: center;
             }
             h1 {
                 font-size: 38px;
