fix: Update title & description

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>The Blob</title>
+        <title>Find The Gender. Maybe</title>
+        <meta name="description" value="Find the gender of a Spanish word, with any luck.">
 
         <link
             href="https://fonts.googleapis.com/css?family=Quicksand:400,700&display=swap"
